Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9477

delete_returning.test fails in mdev8646 tree

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • N/A
    • N/A
    • Optimizer
    • None
    • 10.2.0-5

    Description

      delete_returning test fails in MDEV-8646 tree.

      Crashing queries:

      CREATE TABLE t1 (i1 int);
      INSERT INTO t1 VALUES (1),(2);
      CREATE TABLE t2 (i2 int);
      INSERT INTO t2 VALUES (1),(2);
      DELETE FROM t1 ORDER BY i1 RETURNING ( SELECT i2 FROM t2 );

      The reason the last one crashes is that the execution code first calls:

      JOIN::cleanup (this=0x7fff64065c68, full=true)

      and then it calls

      JOIN::exec (this=0x7fff64065c68)

      that is, attempts to execute a join where it already did a cleanup.

      Attachments

        Issue Links

          Activity

            People

              psergei Sergei Petrunia
              psergei Sergei Petrunia
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: