MDEV-9477: delete_returning.test fails in mdev8646 tree

Make DELETE statement not free its subqueries pre-maturely when
the RETURNING part is present (which may contain subqueries).